[gd_scene load_steps=2 format=3 uid="uid://dl5lo7wbdxnfu"]

[ext_resource type="Script" path="res://scenes/Enemies/enemy.gd" id="1_dsw8t"]

[node name="Enemy" type="Area2D"]
collision_layer = 4
collision_mask = 32
script = ExtResource("1_dsw8t")
max_health = 100
speed = 25.0

[node name="NoticeArea" type="Area2D" parent="."]
collision_layer = 32

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 32

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="MemoryTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0.94902, 0, 0, 0.737255)
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -4.0
offset_right = 17.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
show_percentage = false

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="MemoryTimer" to="." method="_on_memory_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
